--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -83,7 +83,7 @@
             <li><a class="dropdown-item" href="#">View Profile</a></li>
             <li><a class="dropdown-item" href="#">Account Settings</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Log Out</a></li>
+            <li><a class="dropdown-item" href="#" (click)="logout()">Log Out</a></li>
           </ul>
         </li>
       </ul>
