--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -80,10 +80,10 @@
             <i class="fas fa-user-circle"></i> Profile
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-            <li><a class="dropdown-item" href="#">View Profile</a></li>
-            <li><a class="dropdown-item" href="#">Account Settings</a></li>
+            <li><a class="dropdown-item" (click)="goToProfile()">View Profile</a></li>
+            <li><a class="dropdown-item">Account Settings</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#" (click)="logout()">Log Out</a></li>
+            <li><a class="dropdown-item" (click)="logout()">Log Out</a></li>
           </ul>
         </li>
       </ul>
