--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,5 @@
 <!-- Desktop Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-desktop">
-
   <div class="container-fluid">
     <a class="navbar-brand text-white" href="/"> Connectly</a>
     
@@ -13,7 +12,6 @@
     </button>
 
     <div class="collapse navbar-collapse" id="desktopNavbar">
-
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
           <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
@@ -23,10 +21,9 @@
         </li>
       </ul>
 
-
       <ul class="navbar-nav">
         <!-- Notifications Dropdown -->
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="isAuthenticated()">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -47,7 +44,7 @@
         </li>
       
         <!-- Messages Dropdown -->
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="isAuthenticated()">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -68,7 +65,7 @@
         </li>
       
         <!-- Profile Dropdown -->
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="isAuthenticated()">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -86,10 +83,9 @@
             <li><a class="dropdown-item" (click)="logout()">Log Out</a></li>
           </ul>
         </li>
+
+        
       </ul>
-
     </div>
-
   </div>
-  
 </nav>
