--- a/client/src/app/features/left-sidebar/left-sidebar.component.html
+++ b/client/src/app/features/left-sidebar/left-sidebar.component.html
@@ -1,1 +1,24 @@
-<p>left-sidebar works!</p>
+<div class="left-sidebar">
+  <ul class="list-group">
+    <li class="list-group-item">
+      <a routerLink="/profile"> <i class="fas fa-user-circle"></i> Profile </a>
+    </li>
+    <li class="list-group-item">
+      <a routerLink="/friends"> <i class="fas fa-user-friends"></i> Friends </a>
+    </li>
+    <li class="list-group-item">
+      <a routerLink="/groups"> <i class="fas fa-users"></i> Groups </a>
+    </li>
+    <li class="list-group-item">
+      <a routerLink="/messages"> <i class="fas fa-envelope"></i> Messages </a>
+    </li>
+    <li class="list-group-item">
+      <a routerLink="/notifications">
+        <i class="fas fa-bell"></i> Notifications
+      </a>
+    </li>
+    <li class="list-group-item">
+      <a routerLink="/settings"> <i class="fas fa-cog"></i> Settings </a>
+    </li>
+  </ul>
+</div>
