--- a/client/src/app/features/right-sidebar/right-sidebar.component.html
+++ b/client/src/app/features/right-sidebar/right-sidebar.component.html
@@ -14,7 +14,7 @@
       <ul class="list-unstyled">
         <li class="d-flex align-items-center mb-2">
           <img
-            src="https://via.placeholder.com/40"
+            src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZSUyMHBpY3R1cmV8ZW58MHx8MHx8fDA%3D"
             alt="Friend Avatar"
             class="rounded-circle me-2"
             style="width: 40px; height: 40px;"
@@ -26,7 +26,7 @@
         </li>
         <li class="d-flex align-items-center mb-2">
             <img
-              src="https://via.placeholder.com/40"
+              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZSUyMHBpY3R1cmV8ZW58MHx8MHx8fDA%3D"
               alt="Friend Avatar"
               class="rounded-circle me-2"
               style="width: 40px; height: 40px;"
@@ -38,7 +38,7 @@
           </li>
           <li class="d-flex align-items-center mb-2">
             <img
-              src="https://via.placeholder.com/40"
+              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZSUyMHBpY3R1cmV8ZW58MHx8MHx8fDA%3D"
               alt="Friend Avatar"
               class="rounded-circle me-2"
               style="width: 40px; height: 40px;"
@@ -50,7 +50,7 @@
           </li>
           <li class="d-flex align-items-center mb-2">
             <img
-              src="https://via.placeholder.com/40"
+              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZSUyMHBpY3R1cmV8ZW58MHx8MHx8fDA%3D"
               alt="Friend Avatar"
               class="rounded-circle me-2"
               style="width: 40px; height: 40px;"
@@ -62,7 +62,7 @@
           </li>
           <li class="d-flex align-items-center mb-2">
             <img
-              src="https://via.placeholder.com/40"
+              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZSUyMHBpY3R1cmV8ZW58MHx8MHx8fDA%3D"
               alt="Friend Avatar"
               class="rounded-circle me-2"
               style="width: 40px; height: 40px;"
@@ -74,7 +74,7 @@
           </li>
           <li class="d-flex align-items-center mb-2">
             <img
-              src="https://via.placeholder.com/40"
+              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZSUyMHBpY3R1cmV8ZW58MHx8MHx8fDA%3D"
               alt="Friend Avatar"
               class="rounded-circle me-2"
               style="width: 40px; height: 40px;"
@@ -86,7 +86,7 @@
           </li>
           <li class="d-flex align-items-center mb-2">
             <img
-              src="https://via.placeholder.com/40"
+              src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cHJvZmlsZSUyMHBpY3R1cmV8ZW58MHx8MHx8fDA%3D"
               alt="Friend Avatar"
               class="rounded-circle me-2"
               style="width: 40px; height: 40px;"
