--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -1,26 +1,37 @@
-<!-- Desktop Navigation Bar -->
+<!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-desktop">
+
   <div class="container-fluid">
     <a class="navbar-brand text-white" href="/"> Connectly</a>
-    
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#desktopNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+
+    <!-- Search Field -->
+    <form class="d-flex mx-auto ms-3" (submit)="onSearch(searchInput.value)">
+      <input
+        class="form-control me-2"
+        type="search"
+        placeholder="Search in Connectly"
+        aria-label="Search"
+        #searchInput
+        style="font-size: 0.9em; color: #e7e7e7;"
+      />
+      <button class="btn btn-outline-success search-button" type="submit">
+        <i class="fas fa-search"></i>
+      </button>
+    </form>
 
     <div class="collapse navbar-collapse" id="desktopNavbar">
+
+      <!-- Home-Groups Field -->
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
           <a class="nav-link" href="/"><i class="fas fa-home"></i> Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-users"></i> Groups</a>
+          <a class="nav-link" href="/"><i class="fas fa-users"></i> Groups</a>
         </li>
       </ul>
 
+      
       <ul class="navbar-nav">
         <!-- Notifications Dropdown -->
         <li class="nav-item dropdown" *ngIf="isAuthenticated()">
@@ -83,9 +94,8 @@
             <li><a class="dropdown-item" (click)="logout()">Log Out</a></li>
           </ul>
         </li>
-
-        
       </ul>
     </div>
   </div>
+
 </nav>
